# calliope

./: .gitattributes  .gitignore  README.md  __init__.py  __main__.py  pyproject.toml  requirements.txt
core/: brute_force_ops.py  clustering_cmap.py  crosscorrelation.py  preprocessing.py  sparse_plus_cellpose.py  utils.py
core/cellfilter/: config.py  train.py
data/: __init__.py  suite2p_2p_ops_240621.npy
src/calliope/: __init__.py  __main__.py  gui_common.py  pipeline_gui.py  pipeline_gui_walkthrough.md  plot_data_export.py
src/calliope/core/: __init__.py  _cuda_import.py  adaptive_detection.py  analyze_output_gpu.py  batch_pipeline.py  brute_force_ops.py  calliope_settings.py  clustering.py  clustering_cmap.py  clustering_run.py  correlation_image.py  crosscorrelation.py  crosscorrelation_run.py  detection_run.py  event_detection_run.py  export_manifest.py  figscale.py  lowpass_run.py  nwb_export.py  offload.py  preprocess_run.py  preprocessing.py  recording_meta.py  run_loader.py  scale.py  sparse_plus_cellpose.py  spatial.py  spatial_run.py  suite2p_pipeline.py  summary_writer.py  utils.py  zdrift.py
src/calliope/core/cellfilter/: README.md  __init__.py  config.py  dataset.py  model.py  predict.py  train.py
src/calliope/data/: __init__.py  cellfilter_best.pt  human_SLE_2p_meta.csv  updated_settings.npy
src/calliope/scripts/: __init__.py  roi_curation_app.py
src/calliope/tabs/: __init__.py
src/calliope/tabs/batch/: README.md  __init__.py  logic.py  tab.py
src/calliope/tabs/clustering/: README.md  __init__.py  cluster_popout.py  logic.py  tab.py
src/calliope/tabs/crosscorrelation/: README.md  __init__.py  logic.py  tab.py
src/calliope/tabs/event_detection/: README.md  __init__.py  logic.py  prominence_popout.py  tab.py
src/calliope/tabs/lowpass/: README.md  __init__.py  logic.py  tab.py
src/calliope/tabs/preprocess/: README.md  __init__.py  logic.py  tab.py
src/calliope/tabs/qc/: README.md  __init__.py  logic.py  tab.py
src/calliope/tabs/spatial_propagation/: README.md  __init__.py  logic.py  tab.py
src/calliope/tabs/suite2p/: README.md  __init__.py  curation_popout.py  logic.py  tab.py
tabs/clustering/: logic.py  tab.py
tabs/crosscorrelation/: logic.py
tabs/event_detection/: logic.py  tab.py
tabs/lowpass/: logic.py
tabs/preprocess/: tab.py
tabs/qc/: logic.py  tab.py
tabs/suite2p/: tab.py
tests/: test_archive_compression.py  test_batch_oom_retry.py  test_batch_zero_events.py  test_batch_zero_rois.py  test_export_manifest.py  test_imports.py  test_low_data_guards.py  test_qc_gif_playback.py  test_resolve_filtered_mask.py  test_run_loader.py
