# pyproject.toml for the standalone calliope GUI package.
#
# The current layout has pyproject.toml living INSIDE the calliope/ source
# directory. Hatchling's `sources` table remaps the build root onto a
# `calliope` package directory in the wheel so `import calliope` keeps
# working without restructuring the source tree. To build a wheel, run
# `python -m build` from inside this folder (or `pip install -e .`).
#
# When you're ready to actually publish on PyPI, the conventional layout
# is to add a parent project folder, move pyproject.toml + README up one
# level, and drop the `[tool.hatch.build.targets.wheel.sources]` remapping.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calliope"
version = "0.1.0"
description = "Calcium Live-imaging Output Pipeline for Epileptiform-recordings (CalLIOPE) - Tk GUI for Suite2p-based 2P calcium imaging analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Richard Jiang" },
]
keywords = [
    "calcium imaging",
    "suite2p",
    "neuroscience",
    "two-photon",
    "epileptiform",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-image",
    "openpyxl",
    "Pillow",
    "psutil",
    "tifffile",
    "torch",
    "suite2p",
    "cellpose",
]

[project.optional-dependencies]
gpu = ["cupy"]

[project.scripts]
calliope = "calliope.pipeline_gui:main"

[project.urls]
Homepage = "https://github.com/Richard0816/Calcium_imaging_suite2p"

# ---------------------------------------------------------------------------
# Hatchling: package the directory containing this pyproject.toml as the
# `calliope` Python package in the wheel.
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "core/**/*.py",
    "tabs/**/*.py",
    "data/**",
]
exclude = [
    "**/__pycache__/**",
    "**/*.pyc",
    "pyproject.toml",
    "README.md",
]

[tool.hatch.build.targets.wheel.sources]
"" = "calliope"

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "core/**/*.py",
    "tabs/**/*.py",
    "data/**",
    "pyproject.toml",
    "README.md",
]
exclude = ["**/__pycache__/**", "**/*.pyc"]
