# pyproject.toml for the standalone calliope GUI package.
#
# Standard "src layout":
#
#   calliope/                 <- repo root (this directory)
#   |-- pyproject.toml
#   |-- README.md
#   `-- src/
#       `-- calliope/         <- the actual Python package
#           |-- __init__.py
#           |-- pipeline_gui.py
#           |-- ...
#
# Hatchling auto-finds ``src/calliope`` because the project name matches.
# This layout supports ``pip install -e .`` (editable installs) and
# ``python -m build`` for sdist/wheel.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calliope"
version = "0.1.0"
description = "Calcium Live-imaging Output Pipeline for Epileptiform-recordings (CalLIOPE) - Tk GUI for Suite2p-based 2P calcium imaging analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Richard Jiang" },
]
keywords = [
    "calcium imaging",
    "suite2p",
    "neuroscience",
    "two-photon",
    "epileptiform",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-image",
    "openpyxl",
    "Pillow",
    "psutil",
    "tifffile",
    "torch",
    "suite2p",
    "cellpose",
]

[project.optional-dependencies]
# GPU cross-correlation needs a prebuilt CuPy wheel that matches the
# host CUDA toolkit. The plain ``cupy`` source distribution would try to
# compile from source and fails on anything older than CUDA 12, so split
# the extra by CUDA major version. Pick the one that matches your
# installed toolkit (``nvcc --version`` or ``CUDA_PATH``):
#   pip install -e ".[gpu-cuda11]"   # CUDA 11.2 - 11.8
#   pip install -e ".[gpu-cuda12]"   # CUDA 12.x
gpu-cuda11 = ["cupy-cuda11x"]
gpu-cuda12 = ["cupy-cuda12x"]

[project.scripts]
calliope = "calliope.pipeline_gui:main"

[project.urls]
Homepage = "https://github.com/Richard0816/calliope"

# Hatchling wheel/sdist config: src layout is auto-detected, but spelling
# the package path out explicitly keeps things robust if someone renames
# the project. Bundled resource files in src/calliope/data/ ship with the
# wheel automatically because they live under the package directory.

[tool.hatch.build.targets.wheel]
packages = ["src/calliope"]

[tool.hatch.build.targets.sdist]
include = [
    "src/calliope/**",
    "pyproject.toml",
    "README.md",
    ".gitignore",
]
exclude = ["**/__pycache__/**", "**/*.pyc"]
