# pyproject.toml for the standalone calliope GUI package.
#
# Standard "src layout":
#
#   calliope/                 <- repo root (this directory)
#   |-- pyproject.toml
#   |-- README.md
#   `-- src/
#       `-- calliope/         <- the actual Python package
#           |-- __init__.py
#           |-- pipeline_gui.py
#           |-- ...
#
# Hatchling auto-finds ``src/calliope`` because the project name matches.
# This layout supports ``pip install -e .`` (editable installs) and
# ``python -m build`` for sdist/wheel.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calliope"
version = "0.1.0"
description = "Calcium Live-imaging Output Pipeline for Epileptiform-recordings (CalLIOPE) - customtkinter dark-mode GUI for Suite2p-based 2P calcium imaging analysis."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Richard Jiang" },
]
keywords = [
    "calcium imaging",
    "suite2p",
    "neuroscience",
    "two-photon",
    "epileptiform",
    "gui",
    "dark-mode",
    "customtkinter",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
# Version constraints anchored to the proven, tested stack (see
# ``requirements.txt`` for the exact reproducible lock). Lower bounds are
# the tested floor; upper bounds stop a fresh ``pip install`` from pulling
# an untested next-major. ``suite2p`` is pinned EXACTLY: the detection code
# monkey-patches suite2p-1.0.0.1 internals (the estimate_spatial_scale
# ndarray shim and the "<n> ROIs" progress-line ROI cap), so any other
# version silently breaks detection. ``numba`` is constrained (though only
# a transitive dep) because it is the numpy-ABI linchpin for suite2p/cellpose.
dependencies = [
    "numpy>=2.1,<3",
    "pandas>=2.2,<4",
    "scipy>=1.13,<2",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<0.14",
    "scikit-image>=0.24,<0.27",
    "openpyxl>=3.1,<4",
    "Pillow>=10,<13",
    "psutil>=5.9",
    "tifffile>=2022.2.2",
    "imagecodecs>=2023.1.23",
    "torch>=2.4,<3",
    "suite2p==1.0.0.1",
    "cellpose>=4.1,<5",
    "numba>=0.60,<0.66",
    "customtkinter>=5.2,<6",
]

[project.optional-dependencies]
# Dev tooling: ``pip install -e ".[dev]"`` then ``pytest tests/``.
# Currently a smoke-test suite (package imports + headless GUI walk).
dev = ["pytest>=7"]

# GPU cross-correlation needs a prebuilt CuPy wheel that matches the
# host CUDA toolkit. The plain ``cupy`` source distribution would try to
# compile from source and fails on anything older than CUDA 12, so split
# the extra by CUDA major version. Pick the one that matches your
# installed toolkit (``nvcc --version`` or ``CUDA_PATH``):
#   pip install -e ".[gpu-cuda11]"   # CUDA 11.2 - 11.8
#   pip install -e ".[gpu-cuda12]"   # CUDA 12.x
gpu-cuda11 = ["cupy-cuda11x"]
gpu-cuda12 = ["cupy-cuda12x"]

# NWB / DANDI export. Optional: the base pipeline never
# imports pynwb -- calliope.core.nwb_export guards every import.
#   pip install -e ".[nwb]"
nwb = ["pynwb>=2.5", "nwbinspector>=0.4"]

[project.scripts]
calliope = "calliope.pipeline_gui:main"

[project.urls]
Homepage = "https://github.com/Richard0816/calliope"

# Hatchling wheel/sdist config: src layout is auto-detected, but spelling
# the package path out explicitly keeps things robust if someone renames
# the project. Bundled resource files in src/calliope/data/ ship with the
# wheel automatically because they live under the package directory.

[tool.hatch.build.targets.wheel]
packages = ["src/calliope"]

[tool.hatch.build.targets.sdist]
include = [
    "src/calliope/**",
    "pyproject.toml",
    "README.md",
    ".gitignore",
]
exclude = ["**/__pycache__/**", "**/*.pyc"]
